[#14] git jitpack 추가