@@ -2,14 +2,15 @@ package io.github.taesk.parser.constructor;
 
 import com.squareup.javapoet.ClassName;
 import com.squareup.javapoet.CodeBlock;
+import com.squareup.javapoet.FieldSpec;
 import com.squareup.javapoet.MethodSpec;
 import io.github.taesk.parser.Parser;
 import io.github.taesk.parser.field.MockFieldParser;
-
 import org.mockito.Mockito;
 
 import javax.lang.model.element.Modifier;
 import javax.lang.model.element.TypeElement;
+import java.util.Arrays;
 import java.util.List;
 
 public class ConstructorParser implements Parser<MethodSpec> {
@@ -22,18 +23,18 @@ public class ConstructorParser implements Parser<MethodSpec> {
     }
 
     public MethodSpec invoke() {
-        var mockFieldSpecs = mockFieldParser.invoke();
-        var mockFieldInitStatement = mockFieldSpecs.stream()
+        List<FieldSpec> mockFieldSpecs = mockFieldParser.invoke();
+        CodeBlock mockFieldInitStatement = mockFieldSpecs.stream()
                 .map(it -> CodeBlock.of("this.$N = $T.mock($T.class);", it, Mockito.class, it.type))
-                .reduce((a, b) -> CodeBlock.join(List.of(a, b), "\n"))
+                .reduce((a, b) -> CodeBlock.join(Arrays.asList(a, b), "\n"))
                 .orElseGet(() -> CodeBlock.of(""));
 
-        var sutFieldInitStatement =
+        CodeBlock sutFieldInitStatement =
                 CodeBlock.builder()
                         .add("this.sut = new $T(", ClassName.get(element))
                         .add(mockFieldSpecs.stream()
                                 .map(it -> CodeBlock.of("$N", it))
-                                .reduce((a, b) -> CodeBlock.join(List.of(a, b), ", "))
+                                .reduce((a, b) -> CodeBlock.join(Arrays.asList(a, b), ", "))
                                 .orElseGet(() -> CodeBlock.of(""))
                         )
                         .add(")")
@@ -41,7 +42,7 @@ public class ConstructorParser implements Parser<MethodSpec> {
 
         return MethodSpec.constructorBuilder()
                 .addModifiers(Modifier.PUBLIC)
-                .addStatement(CodeBlock.join(List.of(mockFieldInitStatement, sutFieldInitStatement), "\n"))
+                .addStatement(CodeBlock.join(Arrays.asList(mockFieldInitStatement, sutFieldInitStatement), "\n"))
                 .build();
     }
 }
